--- a/index.html
+++ b/index.html
@@ -1,42 +1,42 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Flexbox</title>
-  <link rel="stylesheet" href="style.css">
-</head>
-<body>
-  <div class="flex-container">
-    <div class="one"></div>
-    <div class="two"></div>
-    <div class="three"></div>
-  </div>
-
-  <div class="frame-container">
-   <div class="container">
-     <div class="item-1"></div>
-     <div class="item-2">
-       <div class="chlid-1"></div>
-       <div class="chlid-2"></div>
-     </div>
-     <div class="item-3"></div>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Flexbox</title>
+    <link rel="stylesheet" href="style.css" />
+  </head>
+  <body>
+    <div class="flex-container">
+      <div class="one"></div>
+      <div class="two"></div>
+      <div class="three"></div>
     </div>
-    <div class="non-container">
-      <div class="rectangle-1"></div>
-      <div class="column-containner">
-        <div class="rectangle-2"></div>
-        <div class="rectangle-3"></div>
+
+    <div class="frame-container">
+      <div class="container">
+        <div class="item-1"></div>
+        <div class="item-2">
+          <div class="chlid-1"></div>
+          <div class="chlid-2"></div>
+        </div>
+        <div class="item-3"></div>
       </div>
-   </div>
-   <div class="last-container">
-     <div class="box-1"></div>
-      <div class="mini-container">
-       <div class="B-1"></div>
-       <div class="B-2"></div>
+      <div class="non-container">
+        <div class="rectangle-1"></div>
+        <div class="column-containner">
+          <div class="rectangle-2"></div>
+          <div class="rectangle-3"></div>
+        </div>
       </div>
-     <div class="box-2"></div>
-   </div>
-   </div>
-</body>
+      <div class="last-container">
+        <div class="box-1"></div>
+        <div class="mini-container">
+          <div class="B-1"></div>
+          <div class="B-2"></div>
+        </div>
+        <div class="box-2"></div>
+      </div>
+    </div>
+  </body>
 </html>
